--- a/restaurants/menu_note_enchantee.html
+++ b/restaurants/menu_note_enchantee.html
@@ -24,6 +24,132 @@
          </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
          </section>
+      </header>
+      <main>    
+               <img class="background--menu" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+               alt="Menu la Palette du gout">
+            <section class="menu">
+               <div class="menu__title">
+                  <h1>La note enchantée</h1>                  
+                  <span class="main-container-heart">
+                     <input type="checkbox" id="heart-checkbox" />
+                     <label for="heart-checkbox">
+                       <i class="fa-2x fa-solid fa-heart full-heart"></i>
+                       <i class="fa-2x fa-regular fa-heart empty-heart"></i>
+                     </label>
+                  </span>
+               </div>
+               <div class="menu-full">
+                  <div class="entree test">
+                     <div class="menu__title">
+                        <h2>ENTRÉES</h2>
+                        <span class="title-line"></span> 
+                     </div>
+                     <div class="section__menu__cards">
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Ravioles de foie gras</h3>
+                              <p>Accompagnées de leur crème à la truffe</p>
+                           </div>
+                           <span class="price">25€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Caviar osciètre</h3>
+                              <p>Sur blini à la farine de blé noir</p>
+                           </div>
+                           <span class="price">35€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Homard et espuma de potiron</h3>
+                              <p>Marinés aux zestes d'orange</p>
+                           </div>
+                           <span class="price">20€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Foie gras de canard cuit entier</h3>
+                              <p>Confiture de figue et pain toasté</p>
+                           </div>
+                           <span class="price">35€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-full">
+                  <div class="plats test">
+                     <div class="menu__title">
+                        <h2>PLATS</h2>
+                        <span class="title-line"></span>
+                     </div>
+                     <div class="section__menu__cards">
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Noix de coquilles Saint-Jacques</h3>
+                              <p>Sur lit de purée de céleri-rave</p>
+                           </div>
+                           <span class="price">40€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Langoustine poêlée</h3>
+                              <p>Purée de patate douce</p>
+                           </div>
+                           <span class="price">35€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Mijoté de queue de bœuf </h3>
+                              <p>Et riz sauvage aux zestes de citron</p>
+                           </div>
+                           <span class="price">44€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-full">
+                  <div class="desserts test">
+                     <div class="menu__title">
+                        <h2>DESSERTS</h2>
+                        <span class="title-line"></span>
+                     </div>
+                     <div class="section__menu__cards">
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Macaron noisette et chocolat</h3>
+                              <p>Glace au caramel brun et sel de Guérande</p>
+                           </div>
+                           <span class="price">18€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Baba au rhum revisité </h3>
+                              <p>Avec son coulis de citron</p>
+                           </div>
+                           <span class="price">22€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <article class="dish">
+                           <div class="yolo">
+                              <h3>Tarte au citron meringuée </h3>
+                              <p>Déstructurée</p>
+                           </div>
+                           <span class="price">23€</span>
+                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                        </article>
+                        <section class="container__btn">
+                           <button class="btn__pageversion">Commander</button>
+                        </section>                  
+       </main>
          
          
          <!-- footer_retroliens -->   
