--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -24,140 +24,144 @@
 
          </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
-         </section>
-      </header>
-      <main>    
-               <img class="background--menu" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-               alt="Menu la Palette du gout">
-            <section class="menu">
+      </section>
+   </header>
+   <main>
+      <img class="background--menu"
+         src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+         alt="Menu la Palette du gout">
+      <section class="menu">
+         <div class="menu__title">
+            <h1>Le délice des sens</h1>
+            <span class="main-container-heart">
+               <input type="checkbox" id="heart-checkbox" />
+               <label for="heart-checkbox">
+                  <i class="fa-2x fa-solid fa-heart full-heart"></i>
+                  <i class="fa-2x fa-regular fa-heart empty-heart"></i>
+               </label>
+            </span>
+         </div>
+         <div class="menu-full">
+            <div class="entree test">
                <div class="menu__title">
-                  <h1>Le délice des sens</h1>                  
-                  <span class="main-container-heart">
-                     <input type="checkbox" id="heart-checkbox" />
-                     <label for="heart-checkbox">
-                       <i class="fa-2x fa-solid fa-heart full-heart"></i>
-                       <i class="fa-2x fa-regular fa-heart empty-heart"></i>
-                     </label>
-                  </span>
+                  <h2>ENTRÉES</h2>
+                  <span class="title-line"></span>
                </div>
-               <div class="menu-full">
-                  <div class="entree test">
-                     <div class="menu__title">
-                        <h2>ENTRÉES</h2>
-                        <span class="title-line"></span> 
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonné au yuzu</p>
                      </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Tartare de thon</h3>
-                              <p>Assaisonné au yuzu</p>
-                           </div>
-                           <span class="price">25€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Bouchée de homard croustillant</h3>
-                              <p>Et sa farandole de petits légumes</p>
-                           </div>
-                           <span class="price">35€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Velouté de cèpes</h3>
-                              <p>Aux truffes</p>
-                           </div>
-                           <span class="price">20€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>                        
+                     <span class="price">25€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <p>Et sa farandole de petits légumes</p>
                      </div>
-                  </div>
+                     <span class="price">35€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Velouté de cèpes</h3>
+                        <p>Aux truffes</p>
+                     </div>
+                     <span class="price">20€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
                </div>
-               <div class="menu-full">
-                  <div class="plats test">
-                     <div class="menu__title">
-                        <h2>PLATS</h2>
-                        <span class="title-line"></span>
-                     </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Poulet rôti aux herbes de Provence</h3>
-                              <p>Et sa crème de truffe</p>
-                           </div>
-                           <span class="price">40€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Langouste rôtie</h3>
-                              <p>Et ses légumes de saison</p>
-                           </div>
-                           <span class="price">35€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Côte de bœuf Angus</h3>
-                              <p>Et sa purée de panais</p>
-                           </div>
-                           <span class="price">44€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                     </div>
-                  </div>
+            </div>
+         </div>
+         <div class="menu-full">
+            <div class="plats test">
+               <div class="menu__title">
+                  <h2>PLATS</h2>
+                  <span class="title-line"></span>
                </div>
-               <div class="menu-full">
-                  <div class="desserts test">
-                     <div class="menu__title">
-                        <h2>DESSERTS</h2>
-                        <span class="title-line"></span>
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <p>Et sa crème de truffe</p>
                      </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Farandole de desserts</h3>
-                              <p>Du chef</p>
-                           </div>
-                           <span class="price">18€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Crème brulée </h3>
-                              <p>Revisitée</p>
-                           </div>
-                           <span class="price">22€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Tiramisu</h3>
-                              <p>À la noisette</p>
-                           </div>
-                           <span class="price">23€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <section class="container__btn">
-                           <button class="btn__pageversion">Commander</button>
-                        </section>                  
-       </main>
-         
-         
-         <!-- footer_retroliens -->
+                     <span class="price">40€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Langouste rôtie</h3>
+                        <p>Et ses légumes de saison</p>
+                     </div>
+                     <span class="price">35€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Côte de bœuf Angus</h3>
+                        <p>Et sa purée de panais</p>
+                     </div>
+                     <span class="price">44€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+               </div>
+            </div>
+         </div>
+         <div class="menu-full">
+            <div class="desserts test">
+               <div class="menu__title">
+                  <h2>DESSERTS</h2>
+                  <span class="title-line"></span>
+               </div>
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
+                     </div>
+                     <span class="price">18€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Crème brulée</h3>
+                        <p>Revisitée</p>
+                     </div>
+                     <span class="price">22€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Tiramisu</h3>
+                        <p>À la noisette</p>
+                     </div>
+                     <span class="price">23€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+               </div>
+            </div>
+         </div>
+         <section class="container__btn">
+            <button class="btn__pageversion">Commander</button>
+         </section>
+
+      </section>
+   </main>
+   <!-- footer_retroliens -->
    <footer>
-    <h2>ohmyfood</h2>
-    <div class="footer__text">
-       <div class="icon__text">
-          <i class="fa-solid fa-utensils fa-sm"></i>
-          <p>Proposer un restaurant</p>
-       </div>
-       <div class="icon__text icon__text__gap">
-          <i class="fa-solid fa-handshake-angle fa-xs"></i>
-          <p>Devenez partenaire</p>
-       </div>
-       <p>Mentions légales</p>
-       <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
-    </div>
- </footer>
+      <h2>ohmyfood</h2>
+      <div class="footer__text">
+         <div class="icon__text">
+            <i class="fa-solid fa-utensils fa-sm"></i>
+            <p>Proposer un restaurant</p>
+         </div>
+         <div class="icon__text icon__text__gap">
+            <i class="fa-solid fa-handshake-angle fa-xs"></i>
+            <p>Devenez partenaire</p>
+         </div>
+         <p>Mentions légales</p>
+         <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
+      </div>
+   </footer>
